--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/**/*.test.js"
   },
   "keywords": [],
   "author": "",
@@ -13,12 +13,15 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "chai": "^4.5.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "mocha": "^11.2.2",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.1"
   }
 }
